[project]
name = "topssh"
authors = [{ name = "Lix Xu", email = "xuzenglin@gmail.com" }]
description = "a package on top of fabric to use SSH easily"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ssh", "fabric", "paramiko"]
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
]
dependencies = ["fabric>=3.2.2", "py-term>=0.7"]
dynamic = ["version"]
[tool.setuptools.dynamic]
version = { attr = "topssh.__version__" }

[project.urls]
"Homepage" = "https://github.com/lixxu/topssh"
"Bug Tracker" = "https://github.com/lixxu/topssh/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
